--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DataCF是一个数据采集框架",
   "scripts": {
     "start": "webpack-dev-server --open --config config/webpack.dev.js",
-    "build": "cross-env NODE_ENV='production' webpack --config config/webpack.prod.js",
+    "build": "cross-env NODE_ENV='prod' webpack --config config/webpack.prod.js",
     "build_test": "cross-env NODE_ENV='test' webpack --config config/webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
