--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "es3ify-loader": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^5.2.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
@@ -24,12 +25,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/xwlyy/DataCF.git"
+    "url": "git+https://github.com/drafish/DataCF.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/xwlyy/DataCF/issues"
+    "url": "https://github.com/drafish/DataCF/issues"
   },
-  "homepage": "https://github.com/xwlyy/DataCF#readme"
+  "homepage": "https://github.com/drafish/DataCF#readme"
 }
