--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "webpack-dev-server --open --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV='prod' webpack --config config/webpack.prod.js",
     "build_test": "cross-env NODE_ENV='test' webpack --config config/webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "es3ify-loader": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
