--- a/package.json
+++ b/package.json
@@ -6,7 +6,17 @@
     "start": "webpack-dev-server --open --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV='prod' webpack --config config/webpack.prod.js",
     "build_test": "cross-env NODE_ENV='test' webpack --config config/webpack.prod.js",
-    "test": "mocha"
+    "test": "mocha",
+    "standard": "standard --fix src/**/*.js test/**/*.js"
+  },
+  "standard": {
+    "env": [
+      "mocha",
+      "browser"
+    ],
+    "globals": [
+      "ActiveXObject"
+    ]
   },
   "dependencies": {},
   "devDependencies": {
@@ -18,6 +28,7 @@
     "es3ify-loader": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.2.0",
+    "standard": "^12.0.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
