--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
       "ActiveXObject"
     ]
   },
-  "dependencies": {},
+  "sideEffects": false,
+  "dependencies": {
+    "@babel/runtime": "^7.2.0",
+    "@babel/runtime-corejs2": "^7.2.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
