--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "cross-env NODE_ENV='prod' webpack --config config/webpack.prod.js",
     "build_test": "cross-env NODE_ENV='test' webpack --config config/webpack.prod.js",
     "test": "mocha --require @babel/register",
-    "standard": "standard --fix config/**/*.js src/**/*.js test/**/*.js"
+    "server": "node server/index.js",
+    "standard": "standard --fix config/**/*.js src/**/*.js server/**/*.js test/**/*.js"
   },
   "standard": {
     "env": [
@@ -25,7 +26,10 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@babel/runtime": "^7.2.0"
+    "@babel/runtime": "^7.2.0",
+    "koa": "^2.6.2",
+    "koa-router": "^7.4.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
