--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/runtime": "^7.2.0",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
+    "lodash": "^4.17.11",
     "ws": "^6.1.2"
   },
   "devDependencies": {
